examples/test/testpolicy3320.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3320
  namespace: namespace315
spec:
  podSelector:
    matchLabels:
      key48: value26
      key43: value5
      key18: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value42
      podSelector:
        matchLabels:
          key28: value40
          key48: value7
